# Slit

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: run_simulation.py
src/orbital_slit/: __init__.py  analysis.py  export_artifacts.py  plotting.py  simulation.py  simulation_dynamic.py
tests/: test_gaussian.py  test_import.py
