[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orbital-slit"
version = "0.1.0"
description = "Orbital slit simulation (R fixed, D variable)"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
